Changed the quote

--- a/registrationForm2.html
+++ b/registrationForm2.html
@@ -24,7 +24,7 @@
 	</ul>-->
 	<div class="box">
 		<h2>#ComicCarnival</h2>
-		<h3 id="quote" style="color: yellow; margin-top: -25px;text-align: center;text">Get ready for online Comic fest !!!</h3>
+		<h3 id="quote" style="color: yellow; margin-top: -25px;text-align: center;text">Only planet for online Comic fest !!!</h3>
 		<form>
 			<div class="inputBox">
 				<input type="text" name="" required="">
